<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText,ScrollViewSize">



    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:hint="@string/name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_no"
        android:maxLength="10"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_margin="8dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="#808080"
        android:textSize="24sp"
        tools:ignore="RtlHardcoded" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="sub"
            android:padding="16dp"
            android:text="@string/minus"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />


        <TextView

            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_0"
            android:radius="20dp"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="add"
            android:padding="16dp"
            android:radius="20dp"
            android:text="@string/plus"
            android:textSize="25sp" />


    </LinearLayout>
</LinearLayout>
</ScrollView>

    <Button
        android:id="@+id/order_summary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="?android:attr/colorControlActivated"
        android:onClick="choosetoppings"
        android:padding="20sp"
        android:text="@string/choose_toppings"
        android:textSize="24sp"
        tools:targetApi="lollipop" />
</RelativeLayout>