<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:paddingLeft="100dp"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/order_summary_textView"
        android:textSize="24sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />
    <TextView
        android:id="@+id/order_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/no_order_selected"
        android:textSize="24sp"
        android:layout_below="@+id/order_summary_text_view"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:id="@+id/wcimage"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_below="@id/order_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/wc"
        android:visibility="invisible"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ccimage"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_below="@id/order_text_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:src="@drawable/cc"
        android:visibility="invisible"
        android:contentDescription="@string/choco_coffee" />

    <ImageView
        android:id="@+id/coffeeimage"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_below="@id/order_text_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:src="@drawable/coffee"
        android:visibility="invisible"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/wccimage"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:src="@drawable/wcc"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_margin="16dp"
        android:layout_below="@id/order_text_view"
        tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/getyourlocation"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/get_your_location"
                android:textSize="30sp"
                app:srcCompat="@android:drawable/ic_menu_mylocation"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/order_text_view"
                android:layout_toEndOf="@+id/order_text_view"
                tools:targetApi="ice_cream_sandwich"
                tools:ignore="ContentDescription" />

        </RelativeLayout>
</ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@android:color/holo_blue_light"
        android:onClick="composeEmail"
        android:text="@string/place_your_order"
        android:textSize="24sp" />
</RelativeLayout>
